--- a/css/game.css
+++ b/css/game.css
@@ -4,10 +4,29 @@
     width: 50px;
     height: 50px;
     background-color: red;
+
+    z-index: 0;
 }
 
 #point-tag {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 5px;
+    right: 10px;
+
+    font-size: 2rem;
+
+    z-index: 1;
+    pointer-events: none;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    min-height: 99vh;
+}
+
+#start-btn {
+
 }
